--- a/build.gradle
+++ b/build.gradle
@@ -24,11 +24,21 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.microsoft.sqlserver:mssql-jdbc'
 	annotationProcessor 'org.projectlombok:lombok'
-	testImplementation('org.springframework.boot:spring-boot-starter-test') {
-		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-	}
+	compile group: 'org.springframework.boot', name: 'spring-boot-starter'
+	testCompile('org.springframework.boot:spring-boot-starter-test')
+
+	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
+	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
+	testCompileOnly 'junit:junit:4.12'
+	testRuntimeOnly 'org.junit.vintage:junit-vintage-engine:5.3.1'
+	testCompile 'org.xmlunit:xmlunit-core:2.6.0'
+	testCompile 'org.xmlunit:xmlunit-matchers:2.6.2'
+	testCompile 'org.skyscreamer:jsonassert:1.5.0'
+
 	compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.7.0'
 	compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.7.0'
+
+	compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.4'
 }
 
 test {
