added docker file, added health check controller, modified README.md file to demonstrate container commands

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-spring.datasource.url=jdbc:sqlserver://TAVLAPT309;databaseName=CrystalPizza
+spring.datasource.url=jdbc:sqlserver://192.168.0.3;databaseName=CrystalPizza
 spring.datasource.username=sa
 spring.datasource.password=test123!@#
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
