--- a/build.gradle
+++ b/build.gradle
@@ -19,12 +19,14 @@ repositories {
 }
 
 dependencies {
+
+	implementation ('org.springframework.boot:spring-boot-starter-web')
+	compile (group: 'org.springframework.boot', name: 'spring-boot-starter')
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.microsoft.sqlserver:mssql-jdbc'
 	annotationProcessor 'org.projectlombok:lombok'
-	compile group: 'org.springframework.boot', name: 'spring-boot-starter'
+
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 
 	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
@@ -39,6 +41,7 @@ dependencies {
 	compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.7.0'
 
 	compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.4'
+
 }
 
 test {
