add Logging support along wiht minor enhancements

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,24 @@
 
-spring.datasource.url=jdbc:sqlserver://192.168.0.3;databaseName=CrystalPizza
+spring.datasource.url=jdbc:sqlserver://localhost;databaseName=CrystalPizza
 spring.datasource.username=sa
 spring.datasource.password=test123!@#
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 spring.jpa.hibernate.ddl-auto = update
-server.port = 8088
+server.port = 8091
+
+
+# Turn OFF root level logging
+# logging.level.*=OFF
+
+#Enable only ERROR level logging for root
+#logging.level.root=ERROR
+
+# enable File logging
+logging.level.com.crystalpizaa.api.= INFO
+
+logging.file=/crystalpizza_logs/application.log
+
 
 #spring.profiles.active=dev
